--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 \[completed\]
-node_modules
 out
+1-counter/node_modules/**/*
+!1-counter/node_modules/fable-arch
+2-todo/node_modules/**/*
+!2-todo/node_modules/fable-arch
