--- a/3-todo-fable-arch/package.json
+++ b/3-todo-fable-arch/package.json
@@ -17,7 +17,6 @@
     "virtual-dom": "^2.1.1"
   },
   "devDependencies": {
-    "fable-compiler": "^0.7.18",
-    "fable-import-virtualdom": "^0.8.1"
+    "fable-compiler": "^0.7.18"
   }
 }
