--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
 \[completed\]
 out
-1-counter/node_modules/**/*
-2-todo/node_modules/**/*
-3-todo-fable-arch/node_modules/**/*
-!3-todo-fable-arch/node_modules/fable-arch
+node_modules
