--- a/3-todo-fable-arch/package.json
+++ b/3-todo-fable-arch/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "core-js": "2.4.0",
+    "fable-arch": "^0.10.0-alpha.1",
     "fable-core": "^0.7.14",
     "virtual-dom": "^2.1.1"
   },
